Inherit base template in secret_key/error responses

--- a/ec2stack/templates/delete_secret_key.xml
+++ b/ec2stack/templates/delete_secret_key.xml
@@ -1,5 +1,5 @@
-<DeleteSecretKeyResponse xmlns="http://ec2.amazonaws.com/doc/2013-10-15/">
-    <requestid>{{requestid}}</requestid>
-    <apiKey>{{apikey}}</apiKey>
-    <secretKey>{{secretkey}}</secretKey>
-</DeleteSecretKeyResponse>
+{% extends "response.xml" %}
+{% block response_content %}
+<apiKey>{{apikey}}</apiKey>
+<secretKey>{{secretkey}}</secretKey>
+{% endblock %}
