--- a/ec2stack/templates/generic_error.xml
+++ b/ec2stack/templates/generic_error.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<Response>
-    <Errors>
-        <Error>
-            <Code>{{error}}</Code>
-            <Message>{{message}}</Message>
-        </Error>
-    </Errors>
-    <RequestID>{{requestid}}</RequestID>
-</Response>
+{% extends "response.xml" %}
+{% block response_content %}
+<Errors>
+    <Error>
+        <Code>{{error}}</Code>
+        <Message>{{message}}</Message>
+    </Error>
+</Errors>
+{% endblock %}
