--- a/ec2stack/templates/response.xml
+++ b/ec2stack/templates/response.xml
@@ -1,7 +1,8 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <{{response_type}} xmlns="http://ec2.amazonaws.com/doc/2013-10-15/">
-  {% if request_id %}
-  <requestId>{{request_id}}</requestId> 
-  {% endif %}
-  {% block response_content %}
-  {% endblock %}
+    {% if request_id %}
+    <requestId>{{request_id}}</requestId> 
+    {% endif %}
+    {% block response_content %}
+    {% endblock %}
 </{{response_type}}>
