Add error handling to create keypair

--- a/ec2stack/templates/generic_error.xml
+++ b/ec2stack/templates/generic_error.xml
@@ -1,9 +1,11 @@
 {% extends "response.xml" %}
 {% block response_content %}
+{% autoescape false %}
 	<Errors>
 	    <Error>
 	        <Code>{{error}}</Code>
 	        <Message>{{message}}</Message>
 	    </Error>
 	</Errors>
+{% endautoescape %}
 {% endblock %}
