Add support for listing images by id Again messy implementation here, this will be reafctored along with instances.py very soon

--- a/ec2stack/templates/image_attribute.xml
+++ b/ec2stack/templates/image_attribute.xml
@@ -1,8 +1,8 @@
 {% extends "response.xml" %}
 {% block response_content %}
-    <instanceId>
+	<imageId>
         {{ id }}
-    </instanceId>
+    </imageId>
     <{{ attribute }}>
         <value>
             {{ value }}
