--- a/ec2stack/templates/create_keypair.xml
+++ b/ec2stack/templates/create_keypair.xml
@@ -2,5 +2,5 @@
 {% block response_content %}
     <keyName>{{ key_name }}</keyName>
     <keyFingerprint>{{ key_fingerprint }}</keyFingerprint>
-    <keyMaterial>{{ key_material }}</keyMaterial>
+    {% if key_material %}<keyMaterial>{{ key_material }}</keyMaterial>{%endif%}
 {% endblock %}
