--- a/ec2stack/templates/password.xml
+++ b/ec2stack/templates/password.xml
@@ -1,5 +1,5 @@
 {% extends "response.xml" %}
 {% block response_content %}
-    <instanceId>{{ instance_id }}</instanceId>
-    <passwordData>{{ password_data }}</passwordData>
+    <instanceId>{{ response.instanceid }}</instanceId>
+    <passwordData>{{ response.encryptedpassword }}</passwordData>
 {% endblock %}
