--- a/ec2stack/templates/instances.xml
+++ b/ec2stack/templates/instances.xml
@@ -4,27 +4,27 @@
         <item>
             <reservationId>None</reservationId>
             <instancesSet>
-            {% for instance in response.virtualmachine %}
+                {% for instance in response.virtualmachine %}
                 <item>
                     <instanceId>{{ instance.id }}</instanceId>
-                    <imageId> {{ instance.templateid }} </imageId>
+                    <imageId>{{ instance.templateid }}</imageId>
                     <name>{{ instance.name }}</name>
                     <instanceState>
                         {% if instance.state == 'Starting' %}
-                            <code>0</code>
-                            <name>pending</name>
+                        <code>0</code>
+                        <name>pending</name>
                         {% elif instance.state == 'Running' %}
-                            <code>16</code>
-                            <name>running</name>
+                        <code>16</code>
+                        <name>running</name>
                         {% elif instance.state == 'Stopping' %}
-                            <code>64</code>
-                            <name>stopping</name>
+                        <code>64</code>
+                        <name>stopping</name>
                         {% elif instance.state == 'Expunging' %}
-                            <code>48</code>
-                            <name>terminated</name>
+                        <code>48</code>
+                        <name>terminated</name>
                         {% elif instance.state == 'Stopped' %}
-                            <code>80</code>
-                            <name>stopped</name>
+                        <code>80</code>
+                        <name>stopped</name>
                         {% endif %}
                     </instanceState>
                     <keyName>{{ instance.keypair }}</keyName>
@@ -33,20 +33,20 @@
                     <placement>
                         <availabilityZone>{{ instance.zonename }}</availabilityZone>
                     </placement>
-                    {% if instance.nic %}
+                    {% if 'nic' in instance %}
                     <ipAddress>{{ instance.nic.0.ipaddress }}</ipAddress>
                     {% endif %}
                     <hypervisor>{{ instance.hypervisor }}</hypervisor>
                     <groupSet>
                         {% for securitygroup in instance.securitygroup %}
-                            <item>
-                                <groupId>{{ securitygroup.id }}</groupId>
-                                <groupName>{{ securitygroup.name }}</groupName>
-                            </item>
+                        <item>
+                            <groupId>{{ securitygroup.id }}</groupId>
+                            <groupName>{{ securitygroup.name }}</groupName>
+                        </item>
                         {% endfor %}
                     </groupSet>
                 </item>
-            {% endfor %}
+                {% endfor %}
             </instancesSet>
         </item>
     </reservationSet>
