--- a/ec2stack/templates/securitygroups.xml
+++ b/ec2stack/templates/securitygroups.xml
@@ -2,36 +2,35 @@
 {% block response_content %}
     <securityGroupInfo>
         {% for securitygroup in response.securitygroup %}
-            <item>
-                <ownerId>{{ securitygroup.account }}</ownerId>
-                <groupId>{{ securitygroup.id }}</groupId>
-                <groupName>{{ securitygroup.name }}</groupName>
-                <groupDescription>{{ securitygroup.description }}</groupDescription>
-                <ipPermissions>
-                    {% for rule in securitygroup.ingressrule %}
+        <item>
+            <ownerId>{{ securitygroup.account }}</ownerId>
+            <groupId>{{ securitygroup.id }}</groupId>
+            <groupName>{{ securitygroup.name }}</groupName>
+            <groupDescription>{{ securitygroup.description }}</groupDescription>
+            <ipPermissions>
+                {% for rule in securitygroup.ingressrule %}
+                <item>
+                    <ipProtocol>{{ rule.protocol }}</ipProtocol>
+                    {% if rule.startport %}
+                    <fromPort>{{ rule.startport }}</fromPort>
+                    {% elif 'icmptype' in rule %}
+                    <fromPort>{{ rule.icmptype }}</fromPort>
+                    {% endif %}
+
+                    {% if 'endport' in rule %}
+                    <toPort>{{ rule.endport }}</toPort>
+                    {% elif 'icmpcode' in rule %}
+                    <toPort>{{ rule.icmpcode }}</toPort>
+                    {% endif %}
+                    <ipRanges>
                         <item>
-                            <ipProtocol> {{ rule.protocol }}</ipProtocol>
-                            {% if rule.startport %}
-                                <fromPort>{{ rule.startport }}</fromPort>
-                            {% endif %}
-                            {% if rule.startport %}
-                                <fromPort>{{ rule.icmptype }}</fromPort>
-                            {% endif %}
-                            {% if rule.endport %}
-                                <toPort>{{ rule.endport }}</toPort>
-                            {% endif %}
-                            {% if rule.endport %}
-                                <toPort>{{ rule.icmpcode }}</toPort>
-                            {% endif %}
-                            <ipRanges>
-                                <item>
-                                    <cidrIp>{{ rule.cidr }}</cidrIp>
-                                </item>
-                            </ipRanges>
+                            <cidrIp>{{ rule.cidr }}</cidrIp>
                         </item>
-                    {% endfor %}
-                </ipPermissions>
-            </item>
+                    </ipRanges>
+                </item>
+                {% endfor %}
+            </ipPermissions>
+        </item>
         {% endfor %}
     </securityGroupInfo>
 {% endblock %}
