closes #43 Create wrapper for registerSecretKey

--- a/ec2stack/templates/secretkey.xml
+++ b/ec2stack/templates/secretkey.xml
@@ -1,5 +1,6 @@
 {% extends "response.xml" %}
 {% block response_content %}
-	<apiKey>{{apikey}}</apiKey>
-	<secretKey>{{secretkey}}</secretKey>
+    <AWSAccessKeyId>{{AWSAccessKeyId}}</AWSAccessKeyId>
+    <AWSSecretKey>{{AWSSecretKey}}</AWSSecretKey>
+    <Message>{{Message}}</Message>
 {% endblock %}
