Complete create/list/delete vpc actions.

--- a/ec2stack/templates/create_vpc.xml
+++ b/ec2stack/templates/create_vpc.xml
@@ -1,9 +1,9 @@
 {% extends "response.xml" %}
 {% block response_content %}
    <vpc>
-      <vpcId>{{ vpc.id }}</vpcId>
-      <state>{{ vpc.state }}</state>
-      <cidrBlock>{{ vpc.cidr }}</cidrBlock>
+      <vpcId>{{ response.id }}</vpcId>
+      <state>{{ response.state }}</state>
+      <cidrBlock>{{ response.cidr }}</cidrBlock>
       <tagSet/>
    </vpc>
 {% endblock %}
