Fix snapshot tests

--- a/ec2stack/templates/create_snapshot.xml
+++ b/ec2stack/templates/create_snapshot.xml
@@ -2,7 +2,7 @@
 {% block response_content %}
    <snapshot>
       <snapshotId>{{ response.id }}</snapshotId>
-      <volumeId>{{ snapshot.volumeid }}</volumeId>
+      <volumeId>{{ response.volumeid }}</volumeId>
       <status>{{ response.state }}</status>
    </snapshot>
 {% endblock %}
