--- a/ec2stack/templates/snapshots.xml
+++ b/ec2stack/templates/snapshots.xml
@@ -1,7 +1,7 @@
 {% extends "response.xml" %}
 {% block response_content %}
     <snapshotSet>
-        {% for snapshot in response.snapshot %}
+        {% for snapshot in response.vmsnapshot %}
         <item>
             <snapshotId>{{ snapshot.id }}</snapshotId>
             <volumeId>{{ snapshot.volumeid }}</volumeId>
